# baita

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
docker/initdb/: 01_create_test_db.sql
docs/: AUDITORIA_TECNICA.md  COMPLIANCE.md
migrations/: env.py
migrations/versions/: 0001_wallet_accounts.py  0002_ledger_events.py  0003_ledger_events_immutability_trigger.py  0004_lotes_creditos.py  0005_consumo_lotes.py  0006_regras_capitalizacao.py  0007_campanhas_multiplicador.py  0008_sorteios.py  0009_numeros_sorte_faixas.py  0010_capitalizacao_titulos.py  0011_compras_capitalizacao.py  0012_seed_regra_e_sorteio_iniciais.py  0013_parceiros.py  0014_regras_parceiro.py  0015_config_operacional.py  0016_nf_submissoes.py  0017_catalogo_itens.py  0018_resgates.py  0019_beneficios.py  0020_beneficios_usos.py  0021_beneficios_custo_em_coins.py  0022_anuncios.py  0023_anuncios_imagens.py  0024_beneficios_imagens_e_chamada.py  0025_wallet_accounts_cadastro.py  0026_auth_e_planos.py  0027_usuarios_tags.py  0028_planos_pagamento_e_vantagens.py  0029_notas_servico.py  0030_numeros_sorte_individuais.py  0031_anuncios_slot_livre.py  0032_site_config.py  0033_nf_ultima_tentativa.py  0034_numeros_aleatorios_e_apuracao.py  0035_sorteio_gestao.py  0036_sorteio_banner.py  0037_wallet_foto_perfil.py  0038_beneficios_modos_resgate.py  0039_assinaturas.py  0040_admin_usuarios_gestao.py  (+3 more)
scripts/: importar_logos_beneficios.py  seed_beneficios.py
src/baita_coin/: config.py  db.py  main.py
tests/: conftest.py
(+106 files in other folders)
