[project]
name = "baita-coin"
version = "0.1.0"
description = "Backend do Baita Coin -- Fase 1: nucleo do ledger"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv",
    "python-multipart>=0.0.9",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.26",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
# F: erros reais (imports/vars mortas), E9: erros de sintaxe, I: ordem de imports
select = ["F", "E9", "I"]
